--- a/src/main/resources/templates/admin/main/real-estate/create-real-estate.html
+++ b/src/main/resources/templates/admin/main/real-estate/create-real-estate.html
@@ -22,7 +22,7 @@
     </div>
 
     <div class="form-container">
-        <form th:action="@{/admin/main/real-estates/new}" method="post" enctype="multipart/form-data">
+        <form th:action="@{/admin/main/real-estates/create}" method="post" enctype="multipart/form-data">
 
             <div class="form-group">
                 <label for="name">Name</label>
@@ -43,58 +43,70 @@
                 <label for="newBuildingId">New Building</label>
                 <select id="newBuildingId" name="newBuildingId" class="form-control">
                     <option th:each="building : ${newBuildings}" th:value="${building.id}"
-                            th:text="${building.name}" th:selected="${realEstate.newBuilding?.id == building.id}">Building Name</option>
+                            th:text="${building.name}" th:selected="${realEstate.newBuilding?.id == building.id}">
+                        Building Name
+                    </option>
                 </select>
             </div>
 
             <div class="form-group">
                 <label for="areaSqM">Area (sq.m.)</label>
-                <input type="number" id="areaSqM" name="areaSqM" class="form-control" th:value="${realEstate.areaSqM}" required>
+                <input type="number" id="areaSqM" name="areaSqM" class="form-control" th:value="${realEstate.areaSqM}"
+                       required>
             </div>
 
             <div class="form-group">
                 <label for="priceSqM">Price per sq.m. ($)</label>
-                <input type="number" id="priceSqM" name="priceSqM" class="form-control" th:value="${realEstate.priceSqM}" required>
+                <input type="number" id="priceSqM" name="priceSqM" class="form-control"
+                       th:value="${realEstate.priceSqM}" required>
             </div>
 
             <div class="form-group">
                 <label for="totalPrice">Total Price ($)</label>
-                <input type="number" id="totalPrice" name="totalPrice" class="form-control" th:value="${realEstate.totalPrice}" required>
+                <input type="number" id="totalPrice" name="totalPrice" class="form-control"
+                       th:value="${realEstate.totalPrice}" required>
             </div>
 
             <div class="form-group">
                 <label for="numRooms">Number of Rooms</label>
-                <input type="number" id="numRooms" name="details.numRooms" class="form-control" th:value="${details.numRooms}" required>
+                <input type="number" id="numRooms" name="numRooms" class="form-control"
+                       th:value="${realEstateDetails.numRooms}" required>
             </div>
 
             <div class="form-group">
                 <label for="numFloors">Floor</label>
-                <input type="number" id="numFloors" name="details.numFloors" class="form-control" th:value="${details.numFloors}" required>
+                <input type="number" id="numFloors" name="numFloors" class="form-control"
+                       th:value="${realEstateDetails.numFloors}" required>
             </div>
 
             <div class="form-group">
                 <label for="numStoreys">Number of Floors</label>
-                <input type="number" id="numStoreys" name="details.numStoreys" class="form-control" th:value="${details.numStoreys}" required>
+                <input type="number" id="numStoreys" name="numStoreys" class="form-control"
+                       th:value="${realEstateDetails.numStoreys}" required>
             </div>
 
             <div class="form-group">
                 <label for="yearBuilt">Year Built</label>
-                <input type="number" id="yearBuilt" name="details.yearBuilt" class="form-control" th:value="${details.yearBuilt}" required>
+                <input type="number" id="yearBuilt" name="yearBuilt" class="form-control"
+                       th:value="${realEstateDetails.yearBuilt}" required>
             </div>
 
             <div class="form-group">
                 <label for="numTerracesBalconies">Terraces/Balconies</label>
-                <input type="number" id="numTerracesBalconies" name="details.numTerracesBalconies" class="form-control" th:value="${details.numTerracesBalconies}">
+                <input type="number" id="numTerracesBalconies" name="numTerracesBalconies" class="form-control"
+                       th:value="${realEstateDetails.numTerracesBalconies}">
             </div>
 
             <div class="form-group">
                 <label for="city">City</label>
-                <input type="text" id="city" name="address.city" class="form-control" th:value="${address.city}" required>
+                <input type="text" id="city" name="city" class="form-control" th:value="${address.city}"
+                       required>
             </div>
 
             <div class="form-group">
                 <label for="district">District</label>
-                <input type="text" id="district" name="address.district" class="form-control" th:value="${address.district}" required>
+                <input type="text" id="district" name="district" class="form-control"
+                       th:value="${address.district}" required>
             </div>
 
             <div class="form-group">
@@ -103,17 +115,12 @@
             </div>
 
             <div class="form-group">
-                <form th:action="@{/admin/main/reeal-estates}" method="get">
-                    <button class="btn btn-primary" type="submit">Create Real Estate</button>
-                </form>
+                <button type="submit" class="btn btn-primary">Create Real Estate</button>
                 <a th:href="@{/admin/main/real-estates}" class="btn btn-secondary">Cancel</a>
             </div>
         </form>
     </div>
 </div>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="/js/menu-toggle.js"></script>
-<script src="/js/submenu-toggle.js"></script>
 </body>
 </html>
