Completed - functional creation of real estate

--- a/src/main/resources/static/css/real-estate.css
+++ b/src/main/resources/static/css/real-estate.css
@@ -411,3 +411,31 @@ body {
 .btn-secondary:hover {
     background-color: #e53935;
 }
+
+.custom-file-upload {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    background-color: #2e2e2e;
+    border: 2px dashed #4FC3A1;
+    padding: 10px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.custom-file-upload:hover {
+    background-color: #3e3e3e;
+}
+
+.custom-file-upload input[type="file"] {
+    display: none;
+}
+
+.custom-file-upload span {
+    margin-left: 10px;
+    color: #f1f1f1;
+    font-style: italic;
+    width: auto;
+}
+
