--- a/src/main/resources/templates/admin/main/real-estate/real-estate-details.html
+++ b/src/main/resources/templates/admin/main/real-estate/real-estate-details.html
@@ -21,6 +21,26 @@
         </div>
     </div>
 
+    <div class="real-estate-gallery">
+        <input type="radio" name="gallery" id="img1" checked>
+        <input type="radio" name="gallery" id="img2" th:if="${photos.size() > 1}">
+        <input type="radio" name="gallery" id="img3" th:if="${photos.size() > 2}">
+
+        <div class="gallery-images">
+            <div th:each="photo, iterStat : ${photos}">
+                <div th:class="'image' + (iterStat.index + 1)">
+                    <img th:src="@{${photo.url}}" alt="Real Estate Photo">
+                </div>
+            </div>
+        </div>
+
+        <div class="gallery-controls">
+            <label for="img1"></label>
+            <label for="img2" th:if="${photos.size() > 1}"></label>
+            <label for="img3" th:if="${photos.size() > 2}"></label>
+        </div>
+    </div>
+
     <div class="real-estate-details">
         <table class="details-table">
             <tr class="details-row">
