--- a/src/main/resources/templates/admin/main/real-estate/create-real-estate.html
+++ b/src/main/resources/templates/admin/main/real-estate/create-real-estate.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Create Real Estate</title>
@@ -120,7 +120,7 @@
             <div class="form-group">
                 <label for="photo2">Photo 2</label>
                 <label class="custom-file-upload">
-                    <input type="file" id="photo2" name="photos" accept="image/*" required>
+                    <input type="file" id="photo2" name="photos" accept="image/*">
                     <span id="file-chosen2">No file chosen</span>
                 </label>
             </div>
@@ -128,7 +128,7 @@
             <div class="form-group">
                 <label for="photo3">Photo 3</label>
                 <label class="custom-file-upload">
-                    <input type="file" id="photo3" name="photos" accept="image/*" required>
+                    <input type="file" id="photo3" name="photos" accept="image/*">
                     <span id="file-chosen3">No file chosen</span>
                 </label>
             </div>
